2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-11-22  Michael Schlenker <mic42@users.sourceforge.net>
	
	* dns.tcl: Fixed typo in flags for errorcode decoding

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-03-14  Andreas Kupries  <andreask@activestate.com>

	* spf.tcl (::spf::_exists): Fixed bad use of 'return', reported in
	* pkgIndex.tcl: [SF Tcllib Bug 1826418], by Erik Leunissen. Bumped
	  to version 1.1.1.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Applied patch #1610330 from Sergei Golovan to provide
	asynchronous connection for dns over tcp.

2007-08-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tcllib_dns.man: Documented the -loglevel configure option.

2007-08-22  Andreas Kupries  <andreask@activestate.com>

	* spf.test: Added proper requisites to the testsuite.

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* tcllib_ip.man: Bumped version to 1.1.2 due to the bugfix made
	* ip.tcl:        by the last change.
	* pkgIndex.tcl:

2007-07-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ip.tcl:   bug #1739359 - reject domain names that look like 
	* ip.test:  ipv4 addresses
	
2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tcllib_ip.man: Fixed all warnings due to use of now deprecated
	* tcllib_dns.man: commands. Added a section about how to give feedback.

2006-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ipMoreC.tcl: Silence critcl warning.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>
