@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: ip.test,v 1.7 2007/07/05 13:39:32 patthoyts Exp $
+# RCS: @(#) $Id: ip.test,v 1.8 2009/04/13 20:33:17 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -27,10 +27,25 @@ testing {
 
 # version
 set Data {
-    127.0.0.1 4 0.0.0.0 4 192.168.0.4 4 255.255.255.255 4 127/8 4 192/16 4
-    :: 6 ::1 6 fec0::1 6 ::192.168.0.4 6 fec0:0:0:0:0:0:0:1 6 fffe:0:0::2 6
-    2002:192.168.0.4:: 6 2001:192.168.0.4:: -1 2002:127.0.0.1::1 6
-    hello -1 -1 -1 1.2.3.4.example.com -1 bogus.1.2.3.4.example.com -1
+    127.0.0.1                  4
+    0.0.0.0                    4
+    192.168.0.4                4
+    255.255.255.255            4
+    127/8                      4
+    192/16                     4
+    ::                         6
+    ::1                        6
+    fec0::1                    6
+    ::192.168.0.4              6
+    fec0:0:0:0:0:0:0:1         6
+    fffe:0:0::2                6
+    2002:192.168.0.4::         6
+    2001:192.168.0.4::        -1
+    2002:127.0.0.1::1          6
+    hello                     -1
+    -1                        -1
+    1.2.3.4.example.com       -1
+    bogus.1.2.3.4.example.com -1
 }
 set n 0
 foreach {addr result} $Data {
