@@ -1,3 +1,11 @@
+2009-04-13  Andreas Kupries  <andreask@activestate.com>
+
+	* ip.tcl (::ip::IPv4?, ::ip::version): Corrected check for colons
+	* tcllib_ip.man: (wrong order of arguments), and moved this check,
+	* pkgIndex.tcl: a speed optimization from the look of it, into the
+	  main IPv4 test to be used everywhere. Bumped the package version
+	  to 1.1.3. Fixes [Bug 2123397].
+
 2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
